--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <!-- Nav Start -->
-      <div class="bg-[#15803D]">
+      <section class="bg-[#15803D]">
         <div class="navbar md:text-white w-11/12 mx-auto">
           <div class="navbar-start">
             <div class="dropdown">
@@ -65,8 +65,25 @@
             >
           </div>
         </div>
-      </div>
+      </section>
       <!-- Nav End -->
+
+      <!-- Banner Start -->
+      <section
+        class="banner h-[400px] bg-[#cff0dc] flex items-center justify-center bg-none md:bg-[url('./assets/hero-leaf1.png'),url('./assets/hero-leaf2.png')] md:bg-[length:250px_80%,250px_80%] lg:bg-[length:350px_80%,350px_80%] md:bg-[position:bottom_left,bottom_right] md:bg-no-repeat"
+      >
+        <div class="banner-text text-center space-y-3 w-11/12 lg:w-7/12">
+          <h1 class="text-5xl font-bold">Plant a Tree, Grow a Future</h1>
+          <p>
+            Join our mission to plant 1 million trees and make the Earth greener
+            for future generations.
+          </p>
+          <button class="bg-[#FACC15] btn rounded-full text-[#15803D]">
+            Get Started
+          </button>
+        </div>
+      </section>
+      <!-- Banner End -->
     </header>
     <!-- Script File -->
     <script src="app.js"></script>
