--- a/index.html
+++ b/index.html
@@ -106,13 +106,18 @@
           <!-- TREE CATEGORIES START -->
           <div id="tree-categories" class="col-span-12 lg:col-span-2">
             <h2 class="font-bold">categories</h2>
-            <div id="categories-container" class="pr-3">
-              <button
-                id="all-trees-btn"
-                class="btn btn-tree active lg:w-full mt-2"
-              >
-                All Trees
-              </button>
+            <div
+              id="categories-container"
+              class="pr-3 flex flex-wrap gap-1 lg:flex-col"
+            >
+              <div class="my-2">
+                <button
+                  id="all-trees-btn"
+                  class="btn btn-tree active lg:w-full"
+                >
+                  All Trees
+                </button>
+              </div>
             </div>
           </div>
           <!-- TREE CATEGORIES End -->
@@ -134,6 +139,21 @@
           <!-- CART END -->
         </div>
         <!-- Trees related information End-->
+
+        <!-- MODAL -->
+
+        <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+        <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+          <div class="modal-box">
+            <div id="modal-container"></div>
+            <div class="modal-action">
+              <form method="dialog">
+                <!-- if there is a button in form, it will close the modal -->
+                <button class="btn">Close</button>
+              </form>
+            </div>
+          </div>
+        </dialog>
       </section>
     </main>
     <!-- Main End -->
