--- a/index.html
+++ b/index.html
@@ -220,7 +220,29 @@
       </section>
     </main>
     <!-- Main End -->
+    <!-- Footer Start -->
+    <footer class="bg-[#166534]">
+      <div class="flex justify-center">
+        <div class="footer-content max-w[650px] my-10">
+          <h1 class="text-white text-center text-2xl font bold mb-8">
+            Plant a Tree Today
+          </h1>
+          <div class="fieldset bg-[#15803D] rounded-box w-xs p-4">
+            <input type="text" class="input" placeholder="Your Name" />
+            <input type="text" class="input" placeholder="Your Email Address" />
+            <input type="text" class="input" placeholder="Number of Trees" />
+            <button class="btn bg-[#facc15] rounded-full mt-4">Login</button>
+          </div>
+        </div>
+      </div>
 
+      <div class="bg-[#14532d] py-3">
+        <p class="text-center text-white">
+          © 2025 Green Earth. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+    <!-- Footer End -->
     <!-- Script File -->
     <script src="app.js"></script>
   </body>
