--- a/index.html
+++ b/index.html
@@ -230,7 +230,12 @@
           <div class="fieldset bg-[#15803D] rounded-box w-xs p-4">
             <input type="text" class="input" placeholder="Your Name" />
             <input type="text" class="input" placeholder="Your Email Address" />
-            <input type="text" class="input" placeholder="Number of Trees" />
+            <select class="select">
+              <option disabled selected>Number of Trees</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+            </select>
             <button class="btn bg-[#facc15] rounded-full mt-4">Login</button>
           </div>
         </div>
