button hover added

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="my-2">
                 <button
                   id="all-trees-btn"
-                  class="btn btn-tree active lg:w-full"
+                  class="btn btn-tree active lg:w-full hover:bg-green-400"
                 >
                   All Trees
                 </button>
